# prisma-client-rust-bug

./: Cargo.toml  dev.db
prisma/: schema.prisma
src/: db.rs  main.rs
